setting price of occasion and impeach player to buy older machine

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -191,13 +191,13 @@
                         </div>
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
-                        <div disable class="manix 0 clickable" style="display: none;">
+                        <div class="manix 0 clickable" style="display: none;">
                             <p>Poste à souder</p>
                             <p>Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div disable class="manix 1 clickable" style="display: none;">
+                        <div class="manix 1 clickable" style="display: none;">
                             <p>Assembleur de précision</p>
                             <p>Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
@@ -246,11 +246,11 @@
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
                         <div disable class="own clickable" style="display: none;">
-                            <p> Rien n'est à vendre<br>pour le moment</p>
+                            <p> Vous ne vendez rien<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Supprimer</button>
                         </div>
-                        <div disable class="j1 clickable" style="display: none;">
+                        <div disable class="occaz j1 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -356,7 +356,7 @@
                         <!-- -------------------------------- Neuf --------------------------------- -->
 
                         <div disable class="manix 2 clickable" style="display: none;">
-                            <p>Assembleur mécanique</p> 
+                            <p>Assembleur mécanique</p>
                             <p> Niveau 1</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -409,12 +409,12 @@
 
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
-                        <div disable class="j2 clickable" style="display: none;">
+                        <div disable class="occaz j2 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div disable class="j3 void clickable" style="display: none;">
+                        <div disable class="occaz j3 void clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -424,10 +424,21 @@
                 </div>
             </div>
             <dialog id="confirm-buy">
-                <h2>Devis</h2>
-                <p id="buying"></p>
-                <button class="oui-button">Oui</button>
-                <button class="non-button">Non</button>
+                <div class="modal-content">
+                    <h2>Devis</h2>
+                    <div id="confirm-div" style="display: block;">
+                        <p id="buying"></p>
+                        <button class="oui-button">Oui</button>
+                        <button class="non-button">Non</button>
+                    </div>
+                    <div id="input-div" style="display: none;">
+                        <p>Pour quel prix ?</p>
+                        <form id="price-form" action="">
+                            <input type="number" id="input-price" autocomplete="off"
+                                placeholder="Prix de vente..." /><button class="button">Send</button>
+                        </form>
+                    </div>
+                </div>
             </dialog>
         </dialog>
 
