--- a/views/game.ejs
+++ b/views/game.ejs
@@ -510,7 +510,9 @@
         </dialog>
     </div>
 
-
+    <div class="cameraName">
+        Camera 1
+    </div>
     <!-- Debug -->
     <script type="text/javascript" src="JS/game/stats.min.js"></script>
 
