--- a/views/rules.ejs
+++ b/views/rules.ejs
@@ -3,18 +3,18 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Don't Collapse | Rules</title>
-    <meta name="description" content="Don't Collapse rules"/>
+    <meta name="description" content="Don't Collapse rules" />
     <meta name="author" content="Zephyr Studio" />
     <link rel="stylesheet" href="CSS/style.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@300&display=swap" rel="stylesheet" />
 
-    <link rel="icon" type="image/png" sizes="16x16" href="img/ZephyrStudio_logo.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/ZephyrStudio_logo.png" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -54,29 +54,52 @@
 
     <main class="rules-main" id="home_main">
         <!-- Text displayed in the home page -->
-        <h1>Rules :</h1>
+        <h1>Regles :</h1>
         <section class="rules-content">
-            <p>
-                To win this game, you must sheer all of your enemy shepard sheeps. To achieve this mission, some weapons
-                are
-                available :
+            <p>Bienvenue à l'usine d'Isigny de Strawberry, la marque d'ordinateur 100% locale. Strawberry était, à
+                l'époque, la seule entreprise à produire la majorité de ses composants sur son territoire.
+                Malheureusement,
+                avec la mondialisation, le libre échange et le capitalisme, il revenait souvent moins cher d'acheter à
+                l'autre bout du monde que de produire local. Des grandes marques tels que Macrosoft, Peer, DY, BELL ont
+                pris
+                ce tournant et ont commencé à délocaliser leur production ailleurs. C'est ainsi que vous intervenez.
+                Vous
+                récupérez l'usine de Strawberry, au bord du dépôt de bilan, et votre but est de la rendre compétitive
+                face
+                aux géants mondiaux.
+
+                <br><br>Vous allez pour cela devoir optimiser les trois enjeux du développement durable :
             </p>
+
             <ul>
-                <li><strong>- Sheers :</strong> The basic weapon, sheer the target point;</li>
-                <li><strong>- Strimmer :</strong> <i>Only once during the game,</i> cut the 9 cases near to the target
-                    point;
-                </li>
-                <li><strong>- Baldness epidemic :</strong> <i>Only once during the game,</i> Sheer 5 cases near to the
-                    target
-                    point;
-                </li>
-                <li><strong>- Wolf :</strong> <i>Only once during the game,</i> Sheer a whole flock if it contains only 2
-                    sheeps or
-                    less.</li>
+                <li>Économique en étant rentable</li>
+                <li>Écologique en arrivant a atteindre le 0 carbone</li>
+                <li>Social en pensant à vos employés et aux territoires alentours</li>
             </ul>
+
+            <p>Vous allez avoir à votre disposition, plusieurs variables que vous pourrez ajuster :</p>
+
+            <ul>
+                <li>Vos machines de production</li>
+                <!-- <li>
+                    <ul>
+                        <li>Poste à souder pour greffer le processeur et la carte mère</li>
+                        <li>Assembleur de précision pour assembler la RAM et la mémoire sur la carte mère</li>
+                        <li>Assembleur mécanique pour préparer le chassis</li>
+                        <li>Assembleur général pour tout mettre ensemble</li>
+                    </ul>
+                </li> -->
+                <li>Vos fournisseurs d'électricité, eau, cartons, métal</li>
+                <li>Vos employés</li>
+            </ul>
+
+            <!-- <p>Merci d'avoir repris mon usine. Je sais que c'est un challenge pour toi, de refaire partir l'industrie de
+                l'ordinateur portable quand le marché est partagé entre les grandes multinationales. Je compte sur toi pour
+                pouvoir continuer à faire vivre mon usine avec nos partenaires locaux. Je crois en toi.</p> -->
+            
         </section>
     </main>
-    
+
     <footer>
         <p>CIRious Game 2022 - Zephyr Studio</p>
         <p>Declemy Maxime &#x2759 Delebecque Martin &#x2759 Marquant Enguerrand &#x2759 Mullier Tom &#x2759 Van Boxem
