--- a/public/CSS/style.less
+++ b/public/CSS/style.less
@@ -287,8 +287,9 @@ header {
     justify-content: space-between;
     align-items: center;
     margin-left:5%;
-    margin-top: 5%;
+    // margin-top: 5%;
     width: 90%;
+    // text-transform: uppercase;
 
     h1 {
         font-size: 7rem;
@@ -300,17 +301,19 @@ header {
         color: @primary-color;
     }
     .rules-content {
-        line-height:3rem;
+        font-size: 1rem;
+        line-height:2.3rem;
         width:60%;
         text-align: left;
-        font-family: @primary-font, @secondary-font;
+        font-family: @secondary-font;
         text-shadow: 1px 1px 2px black;
 
 
         p,
         ul li {
             list-style: none;
-            font-size: 1.6rem;
+            font-weight: bold;
+            font-size: 1.3rem;
         }
     }
 }
