--- a/views/game.ejs
+++ b/views/game.ejs
@@ -245,12 +245,12 @@
 
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
-                        <div disable class="own clickable" style="display: none;">
-                            <p> Vous ne vendez rien<br>pour le moment</p>
+                        <div disable class="occaz j1 clickable" style="display: none;">
+                            <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Supprimer</button>
                         </div>
-                        <div disable class="occaz j1 clickable" style="display: none;">
+                        <div disable class="occaz j2 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
@@ -409,12 +409,12 @@
 
                         <!-- ------------------------------ Occasions ------------------------------ -->
 
-                        <div disable class="occaz j2 clickable" style="display: none;">
+                        <div disable class="occaz j1 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <div disable class="occaz j3 void clickable" style="display: none;">
+                        <div disable class="occaz j4 void clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
