affichage de l'occasion en fonction du joueur + fix bug

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -248,7 +248,7 @@
                         <div disable class="occaz j1 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
                             <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Supprimer</button>
+                            <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
                         <div disable class="occaz j2 clickable" style="display: none;">
                             <p>Rien n'est à vendre<br>pour le moment</p>
