--- a/public/CSS/style.less
+++ b/public/CSS/style.less
@@ -185,11 +185,13 @@ header {
     }
     .btn{
         font-size: 1.8rem;
+        padding-left: 60px;
+        padding-right: 60px;
 
     }
     .btn:hover{
-        background-color: @primary-color;
-        color:white;
+        background-color: white;
+        color:@red;
         cursor: pointer;
         border-color: white;
     }
