--- a/views/game.ejs
+++ b/views/game.ejs
@@ -102,7 +102,7 @@
         </div>
 
 
-
+        <!-- open style="position:absolute;margin-top:-400px;z-index:200"  -->
         <!-- Modal Shop -->
         <dialog class="modal" id="shop-modal">
             <div class="modal-content">
@@ -111,7 +111,7 @@
                     <span class="close-button" id="close-shop">&times;</span>
                 </div>
                 <div id="shop">
-                    <div id="main-title" class="rubric">
+                    <div id="main-title" class="rubric title_ressources">
                         <div class="top1 clickable selected">Ressources</div>
                         <div class="top2 clickable">Personnel</div>
                         <div class="top3 clickable">Neuf</div>
