--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+@font-face {
+  font-family: 'Koulen';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/koulen/v25/AMOQz46as3KIBPeWgg.ttf) format('truetype');
+}
 @keyframes fade-in {
   0% {
     opacity: 0;
@@ -46,13 +53,6 @@
   100% {
     transform: translateX(0%);
   }
-}
-@font-face {
-  font-family: 'Koulen';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/koulen/v25/AMOQz46as3KIBPeWgg.ttf) format('truetype');
 }
 html,
 body {
@@ -366,31 +366,63 @@ body h1 {
   color: #383331;
 }
 #shop-modal {
-  height: 700px;
+  padding: 20px;
   width: 1200px;
+  margin: auto;
   overflow: hidden;
-  border-radius: 2%;
+  border-radius: 10px;
   background-color: #383331;
-  border: 3px solid #f5dba6;
+  border: 2px solid #383331;
   color: #f5dba6;
+  cursor: default;
 }
 #shop-modal .modal-content {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+#shop-modal .modal-content .top-modal {
+  font-size: 2rem;
+  padding: 0%;
+  margin-bottom: 2%;
+  margin-top: 0%;
+  letter-spacing: 0.15rem;
+  text-transform: uppercase;
+  height: fit-content;
+}
+#shop-modal .modal-content .top-modal h2,
+#shop-modal .modal-content .top-modal p {
+  text-shadow: 1px 1px 3px black;
+  color: #f5dba6;
+  font-family: "Koulen";
 }
 #shop-modal .modal-content #shop {
+  height: 100%;
   display: grid;
+  align-content: center;
   grid-template-columns: 2fr 2fr 1fr;
-  grid-auto-rows: minmax(40px, auto);
+  grid-auto-rows: minmax(0px, auto);
+  text-transform: uppercase;
+}
+#shop-modal .modal-content #shop .title_ressources {
+  height: fit-content;
 }
 #shop-modal .modal-content #shop .rubric {
-  border-radius: 1%;
   border: solid 2px #f5dba6;
+  font-family: "Koulen";
+  font-size: 1.2rem;
+  font-weight: bolder;
+  color: white;
 }
 #shop-modal .modal-content #shop .clickable:hover:not(.selected) {
   color: #f5dba6;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: white;
   text-decoration: none;
-  cursor: pointer;
+}
+#shop-modal .modal-content #shop .selected {
+  background-color: #f5dba6;
+  color: white;
 }
 #shop-modal .modal-content #shop #main-title {
   grid-column: 1/2;
@@ -433,29 +465,49 @@ body h1 {
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
+#shop-modal .modal-content #shop #left-page,
+#shop-modal .modal-content #shop #right-page {
+  background-color: #f5dba6;
+}
 #shop-modal .modal-content #shop #left-page div,
 #shop-modal .modal-content #shop #right-page div {
   margin: 1rem;
-  border-radius: 1%;
-  border: dashed 1px #f5dba6;
+  border: solid 1px #f5dba6;
   height: 100px;
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: space-between;
-  cursor: default;
+  justify-content: space-evenly;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.603);
+  color: #383331;
+  font-size: 1rem;
+}
+#shop-modal .modal-content #shop #left-page div p,
+#shop-modal .modal-content #shop #right-page div p {
+  height: auto;
+  font-weight: normal;
+  font-size: 1.2rem;
 }
 #shop-modal .modal-content #shop .buy-button {
-  height: 30px;
+  height: auto;
+  padding: 5px 10px 5px 10px;
   background-color: transparent;
-  color: #f5dba6;
-  border-top: 1px solid #f5dba6;
-  border-radius: 5%;
+  color: #383331;
+  border-top: 2px solid #f5dba6;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
   cursor: pointer;
+  font-family: "Koulen";
+  font-weight: bold;
+  font-size: 1rem;
+  margin-bottom: -15px;
 }
 #shop-modal .modal-content #shop .buy-button:hover {
-  background-color: #f5dba6;
+  background-color: white;
   color: #383331;
+  outline: none;
 }
 /* -------------------------------------------------------------------------- */
 /*                                    Chat                                    */
