--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -1,4 +1,6 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
+
 
 @text-color: #eee;
 @bg-color: #383331;
@@ -448,36 +450,74 @@ body {
 }
 
 #shop-modal {
-    height: 700px;
+    padding: 20px;
     width: 1200px;
-
+    // margin-left:50%;
+    // transform: translateX(-50%);
+    margin: auto;
     overflow: hidden;
-    border-radius: 2%;
+    border-radius: 10px;
     background-color: @bg-color;
-    border: 3px solid @primary-color;
+    border: 2px solid @bg-color;
     color: @primary-color;
+    cursor:default;
 
 
     .modal-content {
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        height:100%;
+        .top-modal {
+            font-size: 2rem;
+            padding: 0%;
+            margin-bottom: 2%;
+            margin-top: 0%;
+            letter-spacing: 0.15rem;
+            text-transform: uppercase;
+            height:fit-content;
+
+            h2,
+            p {
+            text-shadow: 1px 1px 3px black;
+
+                color: @primary-color;
+                font-family: "Koulen";
+            }
+        }
 
         #shop {
+            height: 100%;
             display: grid;
+            align-content: center;
             grid-template-columns: 2fr 2fr 1fr;
-            grid-auto-rows: minmax(40px, auto);
+            grid-auto-rows: minmax(0px, auto);
+            text-transform: uppercase;
+
+            .title_ressources {
+                height: fit-content;
+
+            }
 
             .rubric {
-                border-radius: 1%;
+                
                 border: solid 2px @primary-color;
+                font-family: "Koulen";
+                font-size: 1.2rem;
+                font-weight: bolder;
+                color:white;
             }
 
             .clickable:hover:not(.selected) {
                 color: @primary-color;
-                background-color: @backdrop-color;
+                background-color: white;
                 text-decoration: none;
-                cursor: pointer;
             }
 
+            .selected {
+                background-color: @primary-color;
+                color: white
+            }
 
             #main-title {
                 grid-column: 1/2;
@@ -532,30 +572,52 @@ body {
                 grid-template-rows: 1fr 1fr;
             }
 
+            #left-page,
+            #right-page {
+                background-color: @primary-color;
+            }
+
             #left-page div,
             #right-page div {
                 margin: 1rem;
-                border-radius: 1%;
-                border: dashed 1px @primary-color;
+                border: solid 1px @primary-color;
                 height: 100px;
                 display: flex;
                 flex-direction: column;
                 align-content: center;
-                justify-content: space-between;
-                cursor: default;
+                justify-content:space-evenly;
+                cursor: pointer;
+                background-color: rgba(255, 255, 255, 0.603);
+                color: @bg-color;
+                font-size: 1rem;
+            }
+
+            #left-page div p,
+            #right-page div p {
+                height:auto;
+                font-weight:normal;
+                font-size: 1.2rem;
             }
 
             .buy-button {
-                height: 30px;
+                height: auto;
+                padding: 5px 10px 5px 10px;
                 background-color: transparent;
-                color: @primary-color;
-                border-top: 1px solid @primary-color;
-                border-radius: 5%;
+                color: @bg-color;
+                border-top: 2px solid @primary-color;
+                border-bottom: none;
+                border-left: none;
+                border-right: none;
                 cursor: pointer;
+                font-family: "Koulen";
+                font-weight: bold;
+                font-size: 1rem;
+                margin-bottom:-15px;
 
                 &:hover {
-                    background-color: @primary-color;
+                    background-color: white;
                     color: @bg-color;
+                    outline: none;
                 }
             }
         }
@@ -741,14 +803,14 @@ body {
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.356);
     text-align: center;
-    position:fixed;
-    bottom:0;
-    margin-bottom:2em;
-    left:0;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 2em;
+    left: 0;
     margin-left: 50%;
     transform: translateX(-50%);
-    display:none;
-    height:auto;
+    display: none;
+    height: auto;
     z-index: 20;
 }
 
@@ -764,9 +826,11 @@ body {
     column-gap: 20px;
     row-gap: 20px;
     justify-items: center;
-    &:hover{
+
+    &:hover {
         cursor: pointer;
     }
+
     .param-content[open] {
         animation: slide-left-params 100ms forwards, fade-in 250ms forwards;
 
