not display own game for leave

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -30,8 +30,7 @@
     <input type="hidden" value="<%= username %>" id="username" />
 
     <div id="room">
-        <h1>Bienvenue <%= username %> !
-        </h1>
+        <h1>Bienvenue <%= username %> !</h1>
         <div id="player_list"></div>
         <button type="submit" id="BtnGame" style="display: none;"><i class="fa-solid fa-display"></i> Commencer la partie !</button>
         <button id="chat-button"><i class="fa-solid fa-comment-dots"></i> Ouvrir le Chat</button>
