--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -449,6 +449,119 @@ body {
     color: @bg-color
 }
 
+.selected::before {
+    content: "> ";
+}
+
+#confirm-buy {
+    &::backdrop {
+        background-color: rgba(0, 0, 0, 0.466);
+    }
+
+    padding: 40px;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 10px;
+    background-color: @bg-color;
+    border: 2px solid @bg-color;
+    color: @primary-color;
+    cursor: default;
+    font-family: @primary-font;
+    font-weight: bold;
+
+    #input-div {
+        width: 100%;
+    }
+
+    #price-form {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 10px;
+
+        input {
+            height: 40px;
+            border-bottom: 3px solid @primary-color;
+            color: @primary-color;
+            background-color: transparent;
+            font-size: .9rem;
+            font-weight: bold;
+            border-left: none;
+            border-right: none;
+            border-top: none;
+            outline:none;
+        }
+
+        input[type=number]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px 20px;
+            height: 40px;
+            border-radius: 8px;
+            cursor: pointer;
+            border: 3px solid @primary-color;
+            color: @bg-color;
+            background-color: @primary-color;
+            font-size: .9rem;
+            font-weight: bold;
+            margin-left:15px;
+
+            &:hover {
+                background-color: transparent;
+                color: @primary-color;
+                transition: background-color 0.3s;
+            }
+        }
+    }
+
+    .modal-content h2 {
+        text-transform: uppercase;
+        font-family: "Koulen";
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+
+    #confirm-div {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        div {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+
+        div button {
+            width: 45%;
+            height: 40px;
+            border-radius: 8px;
+            cursor: pointer;
+            border: 3px solid @primary-color;
+            color: @bg-color;
+            background-color: @primary-color;
+            font-size: .9rem;
+            font-weight: bold;
+
+            &:hover {
+                background-color: transparent;
+                color: @primary-color;
+                transition: background-color 0.3s;
+            }
+
+        }
+    }
+}
+
 #shop-modal {
     padding: 20px;
     width: 1200px;
@@ -460,14 +573,15 @@ body {
     background-color: @bg-color;
     border: 2px solid @bg-color;
     color: @primary-color;
-    cursor:default;
+    cursor: default;
 
 
     .modal-content {
         text-align: center;
         display: flex;
         flex-direction: column;
-        height:100%;
+        height: 100%;
+
         .top-modal {
             font-size: 2rem;
             padding: 0%;
@@ -475,11 +589,11 @@ body {
             margin-top: 0%;
             letter-spacing: 0.15rem;
             text-transform: uppercase;
-            height:fit-content;
+            height: fit-content;
 
             h2,
             p {
-            text-shadow: 1px 1px 3px black;
+                text-shadow: 1px 1px 3px black;
 
                 color: @primary-color;
                 font-family: "Koulen";
@@ -500,12 +614,12 @@ body {
             }
 
             .rubric {
-                
+
                 border: solid 2px @primary-color;
                 font-family: "Koulen";
                 font-size: 1.2rem;
                 font-weight: bolder;
-                color:white;
+                color: white;
             }
 
             .clickable:hover:not(.selected) {
@@ -585,7 +699,7 @@ body {
                 display: flex;
                 flex-direction: column;
                 align-content: center;
-                justify-content:space-evenly;
+                justify-content: space-evenly;
                 cursor: pointer;
                 background-color: rgba(255, 255, 255, 0.603);
                 color: @bg-color;
@@ -594,8 +708,8 @@ body {
 
             #left-page div p,
             #right-page div p {
-                height:auto;
-                font-weight:normal;
+                height: auto;
+                font-weight: normal;
                 font-size: 1.2rem;
             }
 
@@ -612,7 +726,7 @@ body {
                 font-family: "Koulen";
                 font-weight: bold;
                 font-size: 1rem;
-                margin-bottom:-15px;
+                margin-bottom: -15px;
 
                 &:hover {
                     background-color: white;
@@ -675,6 +789,10 @@ body {
             width: calc(20% - 20px);
             height: 100%;
             margin-left: 20px;
+
+            &:hover {
+                color: @primary-color;
+            }
         }
     }
 
