--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -443,7 +443,9 @@ body {
         }
     }
 }
-
+.clickable{
+    cursor:pointer;
+}
 .selected {
     background-color: @primary-color;
     color: @bg-color
