--- a/views/game.ejs
+++ b/views/game.ejs
@@ -81,10 +81,7 @@
                         <div class="carton clickable" style="display:block;">Cartons</div>
                         <div class="etain clickable" style="display:block;">Etain - Quincaillerie</div>
 
-                        <div class="inge clickable" style="display: none;">Ingenieur</div>
-                        <div class="super clickable" style="display: none;">Superviseur</div>
-                        <div class="maint clickable" style="display: none;">Maintenance</div>
-                        <div class="menage clickable" style="display: none;">Menage</div>
+                        <div class="perso clickable" style="display: none;">Personnel</div>
 
                         <div class="manix clickable" style="display: none;">Manix 2</div>
                         <div class="droit clickable" style="display: none;">Droit O But</div>
@@ -145,47 +142,13 @@
                         </div>
 
                         <!-- ------------------------------ Personnel ------------------------------ -->
-
-                        <!-- <div class="inge 1 clickable" style="display: none;">
-                            <p>Ingenieur 1</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-                        <div class="inge 2 clickable" style="display: none;">
-                            <p>Ingenieur 2</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-
-                        <!-- <div class="super 1 clickable" style="display: none;">
-                            <p>Superviseur 1</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-                        <div class="super 2 clickable" style="display: none;">
-                            <p>Superviseur 2</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-
                         <div class="maint 1 clickable" style="display: none;">
-                            <p>Maintenance 1</p>
+                            <p>Maintenance</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <!-- <div class="maint 2 clickable" style="display: none;">
-                            <p>Maintenance 2</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-
-                        <!-- <div class="menage 1 clickable" style="display: none;">
-                            <p>Menage 1</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-                        <div class="menage 2 clickable" style="display: none;">
-                            <p>Menage 2</p>
+                        <div class="menage 1 clickable" style="display: none;">
+                            <p>Menage</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
@@ -309,49 +272,16 @@
 
                         <!-- ------------------------------ Personnel ------------------------------ -->
 
-                        <div class="inge 3 clickable" style="display: none;">
-                            <p>Ingenieur 3</p>
+                        <div class="inge 1 clickable" style="display: none;">
+                            <p>Ingenieur</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-                        <!-- <div class="inge 4 clickable" style="display: none;">
-                            <p>Ingenieur 4</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-
-                        <!-- <div class="super 3 clickable" style="display: none;">
-                            <p>Superviseur 3</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-                        <div class="super 4 clickable" style="display: none;">
-                            <p>Superviseur 4</p>
+                        <div class="super 1 clickable" style="display: none;">
+                            <p>Superviseur</p>
                             <p style="display: none;">Rapide description</p>
                             <button class="buy-button" style="display: none;">Acheter</button>
                         </div>
-
-                        <!-- <div class="maint 3 clickable" style="display: none;">
-                            <p>Maintenance 3</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-                        <div class="maint 4 clickable" style="display: none;">
-                            <p>Maintenance 4</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
-
-                        <!-- <div class="menage 3 clickable" style="display: none;">
-                            <p>Menage 3</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div>
-                        <div class="menage 4 clickable" style="display: none;">
-                            <p>Menage 4</p>
-                            <p style="display: none;">Rapide description</p>
-                            <button class="buy-button" style="display: none;">Acheter</button>
-                        </div> -->
 
                         <!-- -------------------------------- Neuf --------------------------------- -->
 
@@ -469,6 +399,15 @@
             </form>
             <div id="messages"></div>
 
+        </div>
+    </dialog>
+
+    <dialog class="modal" id="results-modal">
+        <div class="modal-content">
+            <div class="top-modal">
+                <h2 class="title-modal">Résultats</h2>
+                <span class="close-button" id="close-results">&times;</span>
+            </div>
         </div>
     </dialog>
 
