before after on ribric

--- a/public/CSS/hud.css
+++ b/public/CSS/hud.css
@@ -370,6 +370,11 @@ body h1 {
 }
 .selected::before {
   content: "> ";
+  white-space: pre;
+}
+.selected::after {
+  content: " <";
+  white-space: pre;
 }
 #confirm-buy {
   padding: 40px;
