--- a/public/CSS/hud.less
+++ b/public/CSS/hud.less
@@ -453,6 +453,11 @@ body {
 
 .selected::before {
     content: "> ";
+    white-space: pre;
+}
+.selected::after {
+    content: " <";
+    white-space: pre;
 }
 
 #confirm-buy {
